--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,8 @@ dependencies {
     //circle status
     implementation 'com.github.3llomi:CircularStatusView:V1.0.3'
 
+    //storyView
+    implementation 'com.github.OMARIHAMZA:StoryView:1.0.2-alpha'
+
 
 }
